--- a/saint_environment.yml
+++ b/saint_environment.yml
@@ -1,4 +1,4 @@
-name: saint_env
+name: cuda118_env
 channels:
   - conda-forge
 dependencies:
@@ -160,25 +160,22 @@ dependencies:
       - mpmath==1.3.0
       - networkx==3.3
       - numpy==2.1.2
-      - nvidia-cublas-cu12==12.8.3.14
-      - nvidia-cuda-cupti-cu12==12.8.57
-      - nvidia-cuda-nvrtc-cu12==12.8.61
-      - nvidia-cuda-runtime-cu12==12.8.57
-      - nvidia-cudnn-cu12==9.7.1.26
-      - nvidia-cufft-cu12==11.3.3.41
-      - nvidia-cufile-cu12==1.13.0.11
-      - nvidia-curand-cu12==10.3.9.55
-      - nvidia-cusolver-cu12==11.7.2.55
-      - nvidia-cusparse-cu12==12.5.7.53
-      - nvidia-cusparselt-cu12==0.6.3
-      - nvidia-nccl-cu12==2.26.2
-      - nvidia-nvjitlink-cu12==12.8.61
-      - nvidia-nvtx-cu12==12.8.55
+      - nvidia-cublas-cu11==11.11.3.6
+      - nvidia-cuda-cupti-cu11==11.8.87
+      - nvidia-cuda-nvrtc-cu11==11.8.89
+      - nvidia-cuda-runtime-cu11==11.8.89
+      - nvidia-cudnn-cu11==9.1.0.70
+      - nvidia-cufft-cu11==10.9.0.58
+      - nvidia-curand-cu11==10.3.0.86
+      - nvidia-cusolver-cu11==11.4.1.48
+      - nvidia-cusparse-cu11==11.7.5.86
+      - nvidia-nccl-cu11==2.21.5
+      - nvidia-nvtx-cu11==11.8.86
       - pillow==11.0.0
       - setuptools==70.2.0
       - sympy==1.13.3
-      - torch==2.7.0+cu128
-      - torchaudio==2.7.0+cu128
-      - torchvision==0.22.0+cu128
+      - torch==2.7.0+cu118
+      - torchaudio==2.7.0+cu118
+      - torchvision==0.22.0+cu118
       - triton==3.3.0
       - typing-extensions==4.12.2
